<resources>
    <string name="app_name">Altla Vision Builder</string>

    <string name="button_translate">TRANSLATE</string>
    <string name="button_rotate">ROTATE</string>
    <string name="button_scale">SCALE</string>
    <string name="button_edit">Edit</string>
    <string name="button_create">Create</string>
    <string name="button_delete">DELETE</string>
    <string name="button_detail">Detail</string>
    <string name="button_find_by_name">Find by Name</string>
    <string name="button_find_by_place">Find by Place</string>
    <string name="button_start">Start</string>
    <string name="button_select">Select</string>
    <string name="button_save">Save</string>
    <string name="button_sign_out">Sign Out</string>

    <string name="radio_button_public">Public</string>
    <string name="radio_button_group">Group</string>
    <string name="radio_button_user">User</string>

    <string name="toast_tango_out_of_date">Tango service outdated.</string>
    <string name="toast_tango_error">Tango error occurred.</string>

    <string name="snackbar_failed">Failed.</string>
    <string name="snackbar_done">Done.</string>
    <string name="snackbar_image_file_not_found">Image file not found.</string>
    <string name="snackbar_action_request_permission">Request permission</string>

    <string name="toast_failed">Failed.</string>
    <string name="toast_google_api_client_connection_failed">Google Play Services error.</string>
    <string name="toast_google_sign_in_failed">Google Sign-In failed.</string>
    <string name="toast_adf_save_load_permissions_required">Area Learning permission required.</string>

    <string name="progress_dialog_signin_in">Signing in...</string>
    <string name="progress_dialog_upload">Uploading...</string>

    <string name="nav_sign_out">Sign out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_content_confirm_delete_texture">Delete this texture?</string>

    <string name="hint_name">Name</string>

    <string name="label_id">ID</string>
    <string name="label_place">Place</string>
    <string name="label_level">Level</string>
    <string name="label_name">Name</string>
    <string name="label_area">Area</string>
    <string name="label_area_description">Area Description</string>
    <string name="label_scene">Scene</string>
    <string name="label_position">Position</string>
    <string name="label_orientation">Orientation</string>
    <string name="label_scale">Scale</string>
    <string name="label_created_at">Created At</string>
    <string name="label_updated_at">Updated At</string>
    <string name="label_x">X</string>
    <string name="label_y">Y</string>
    <string name="label_z">Z</string>
    <string name="label_w">W</string>
    <string name="label_area_mode">Area Mode</string>
    <string name="label_area_mode_public">Public mode</string>
    <string name="label_area_mode_user">User mode</string>

    <string name="title_sign_in_view">Sign In</string>
    <string name="title_area_settings_view">Area Settings</string>
    <string name="title_area_settings_list_view">History</string>
    <string name="title_area_mode_view">Select Area Mode</string>
    <string name="title_area_find_view">Find Area</string>
    <string name="title_area_by_place_list_view">Select Area</string>
    <string name="title_area_description_by_area_list_view">Select Area Description</string>
    <string name="title_settings_view">Settings</string>
    <string name="title_actor_metadata_edit_view">Edit</string>

    <string name="action_create">Create</string>
    <string name="action_debug">Debug ON/OFF</string>
    <string name="action_close">Close</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_pick_place">Pick Place</string>
    <string name="action_history">History</string>
    <string name="action_select">Select</string>

    <string name="input_error_required">Required.</string>

    <string name="dialog_message_confirm_delete">Delete the actor?</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_delete">Delete</string>

    <string name="button_set_frame_buffers_visible_true">Show Frame Buffers</string>
    <string name="button_set_frame_buffers_visible_false">Hide Frame Buffers</string>
    <string name="button_set_tango_meshes_visible_true">Show Tango Meshes</string>
    <string name="button_set_tango_meshes_visible_false">Hide Tango Meshes</string>
    <string name="button_translate_menu">T</string>
    <string name="button_x_axis">X</string>
    <string name="button_y_axis">Y</string>
    <string name="button_z_axis">Z</string>
    <string name="button_rotate_menu">R</string>
    <string name="button_scale_menu">S</string>
    <string name="button_show_settings">Settings</string>
    <string name="button_switch_to_edit_mode">Edit</string>
    <string name="button_show_image_asset_list_pane">Image Actor</string>
    <string name="button_set_camera_preview_visible_false">Hide Camera Preview</string>
    <string name="button_set_camera_preview_visible_true">Show Camera Preview</string>

</resources>
